--- a/Vimas/Views/Shared/_Layout.cshtml
+++ b/Vimas/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
     @*<link href="~/Content/plugins/bootstrap-select/dist/css/bootstrap-select.css" rel="stylesheet"/>*@
     <link href="~/Content/plugins/select2-4.0.3/dist/css/select2.min.css" rel="stylesheet" />
     @*<link href="~/Content/plugins/DataTables-1.10.12/media/css/dataTables.bootstrap.min.css" rel="stylesheet" />*@
+    <link href="~/Content/plugins/select2-4.0.3/dist/css/select2.min.css" rel="stylesheet"/>
     <!-- CSS -->
     <link href="~/Content/template/template-material/css/app.min.1.css" rel="stylesheet">
     <link href="~/Content/template/template-material/css/app.min.2.css" rel="stylesheet">
@@ -107,7 +108,7 @@
                             <a href="@Url.Action("Index","ThongTinCaNhan", new { area = "HocVien" })"><i class="sub-menu zmdi zmdi-trending-up"></i> Thông tin học viên</a>
                         </li>
                         <li>
-                            <a href="#"><i class="sub-menu zmdi zmdi-trending-up"></i> Nothing</a>
+                            <a href="@Url.Action("Index", "ThongTinNopTien", new { area = "HocVien" })"><i class="sub-menu zmdi zmdi-trending-up"></i> Danh sách thu/chi</a>
                         </li>
                     </ul>
                 </li>
