--- a/Vimas/Content/css/theme.css
+++ b/Vimas/Content/css/theme.css
@@ -210,4 +210,5 @@ button:focus, a:focus, input:focus, select:focus {
 
 input[readonly].default-cursor {
     cursor: default;
+    background-color:white;
 }
