Thêm enum cho loại tiền

--- a/Vimas/Areas/HocVien/Views/ThongTinNopTien/Edit.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinNopTien/Edit.cshtml
@@ -77,7 +77,7 @@
 
 <script>
     $(document).ready(function () {
-        var form = $('#createThongTinNopTienForm')
+        var form = $('#editThongTinNopTienForm')
             .removeData("validator") /* added by the raw jquery.validate plugin */
             .removeData("unobtrusiveValidation");  /* added by the jquery unobtrusive plugin */
 
