--- a/Vimas/Areas/HocVien/Views/ThongTinNopTien/Create.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinNopTien/Create.cshtml
@@ -22,10 +22,9 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        @Html.LabelFor(q => q.LoaiTien, new { @class = "control-label col-md-4" })
+                        @Html.LabelFor(q => q.TypeOfMoney, new { @class = "control-label col-md-4" })
                         <div class="col-md-5">
-                            @Html.TextBoxFor(q => q.LoaiTien, new { @class = "form-control col-sm-12" })
-                            @Html.ValidationMessageFor(q => q.LoaiTien)
+                            @Html.EnumDropDownListFor(q => q.TypeOfMoney, new { @class = "form-control col-sm-12" })
                         </div>
                     </div>
                     <div class="form-group">
@@ -59,7 +58,7 @@
                     <div class="form-group">
                         @Html.LabelFor(q => q.AvailableThongTinCaNhan, new { @class = "control-label col-md-4" })
                         <div class="col-md-5">
-                            @Html.DropDownListFor(q => q.IdThongTinCaNhan,this.Model.AvailableThongTinCaNhan, new { @class="form-control col-sm-12", @id= "select2ThongTinCaNhan"})
+                            @Html.DropDownListFor(q => q.IdThongTinCaNhan, this.Model.AvailableThongTinCaNhan, new { @class = "form-control col-sm-12", @id = "select2ThongTinCaNhan" })
                         </div>
                     </div>
                 </div>
