--- a/Vimas/Views/Shared/_Layout.cshtml
+++ b/Vimas/Views/Shared/_Layout.cshtml
@@ -107,7 +107,7 @@
                             <a href="@Url.Action("Index","ThongTinCaNhan", new { area = "HocVien" })"><i class="sub-menu zmdi zmdi-trending-up"></i> Thông tin học viên</a>
                         </li>
                         <li>
-                            <a href="#"><i class="sub-menu zmdi zmdi-trending-up"></i> Nothing</a>
+                            <a href="@Url.Action("Index", "KyTucXa", new { area = "HocVien"})"><i class="sub-menu zmdi zmdi-trending-up"></i> Thông tin ký túc xá</a>
                         </li>
                     </ul>
                 </li>
