--- a/Vimas/Areas/HocVien/Views/QuaTrinhHocTap/Create.cshtml
+++ b/Vimas/Areas/HocVien/Views/QuaTrinhHocTap/Create.cshtml
@@ -6,7 +6,7 @@
 
 <div class="modal-dialog modal-lg">
     <div class="modal-content">
-        <form id="createQuaTrinhHocTapForm" method="post">
+        <form id="createQuaTrinhHocTapForm" method="post" action="@Url.Action("Create","QuaTrinhHocTap")">
             @Html.AntiForgeryToken()
             @Html.HiddenFor(q => q.IdThongTinCaNhan)
             <div class="modal-header">
@@ -75,19 +75,23 @@
     })
 
     function createQTHT() {
+        var form = $('#createQuaTrinhHocTapForm');
+        $.validator.unobtrusive.parse(form);
         var formData = $('#createQuaTrinhHocTapForm').serialize();
-        $.ajax({
-            type: "POST",
-            url: '@Url.Action("Create","QuaTrinhHocTap")',
-            data: formData,
-            success: function (result) {
-                alert(result.message);
-                $('#createQTHTPanel').modal('hide');
-                RefreshQTHTTable();
-            },
-            error: function (error) {
-                alert(result.message);
-            }
-        });
+        if (form.valid()) {
+            $.ajax({
+                type: "POST",
+                url: '@Url.Action("Create","QuaTrinhHocTap")',
+                data: formData,
+                success: function (result) {
+                    alert(result.message);
+                    $('#createQTHTPanel').modal('hide');
+                    RefreshQTHTTable();
+                },
+                error: function (error) {
+                    alert(result.message);
+                }
+            });
+        }
     }
 </script>
