--- a/Vimas/Areas/HocVien/Views/QuaTrinhHocTap/Edit.cshtml
+++ b/Vimas/Areas/HocVien/Views/QuaTrinhHocTap/Edit.cshtml
@@ -53,7 +53,7 @@
                     <div class="form-group">
                         @Html.LabelFor(q => q.DaTotNghiep, new { @class = "control-label col-md-4" })
                         <div class="col-md-5">
-                            <input type="checkbox" checked="@(this.Model.DaTotNghiep.Value ? "":null)"/>
+                            <input type="checkbox" checked="@(this.Model.DaTotNghiep.Value ? "":null)" id="DaTotNghiep" name="DaTotNghiep" value="true"/>
                         </div>
                     </div>
                 </div>
